# NandLogic

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  generate.sh  main.cpp  run.sh
src/: ErrorHandler.hpp  __template.hpp  main.cpp
src/Controller/: InputHandler.cpp  InputHandler.hpp
src/Model/: Connector.cpp  Connector.hpp  Gate.cpp  Gate.hpp
src/Util/: ErrorHandler.hpp
src/View/: UI.hpp  Window.cpp
src/test/: windowTest.cpp
